upgrade packages and improve fix overflow issue in tv info component

--- a/src/styles/comp/wi.scss
+++ b/src/styles/comp/wi.scss
@@ -85,10 +85,10 @@
     gap: 1rem;
   }
   .wrap {
-    inline-size: 80%;
+    flex: 1;
   }
   .widget-ep-desc {
-    flex-grow: 1;
+    flex: 2;
   }
 
   .widget-basic-info {
@@ -104,6 +104,7 @@
 
 @include breakpoint-up("xl") {
   .wrap {
+    flex: unset;
     inline-size: auto;
   }
 }
